# CC_git_github

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  train.py
data/raw/: test.csv
scripts/: check_lfs.py
src/data/: Data_download.py  __init__.py
src/models/: __init__.py
